--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
             - 'README.md'
     workflow_dispatch:
 
+env:
+    LC_APPLICATION_ID: nexus-repo-asset-lister
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -25,6 +28,25 @@ jobs:
               run: |
                   go build -ldflags='-s -w'
 
-            # - name: Run Tests
-            #   run: |
-            #       ./unit-test.sh
+    sonatype:
+        name: Sonatype Lifecycle
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+        steps:
+            - name: Checkout Code
+              uses: actions/checkout@v4
+
+            - name: Setup Go
+              uses: actions/setup-go@v5
+              with:
+                  go-version-file: 'go.mod'
+
+            - name: Sonatype Lifecycle Evaluation
+              id: evaluate
+              uses: sonatype/actions/evaluate@v1
+              with:
+                  iq-server-url: ${{ vars.SONATYPE_PLATFORM_URL }}
+                  username: ${{ secrets.SONATYPE_LIFECYCLE_USERNAME }}
+                  password: ${{ secrets.SONATYPE_LIFECYCLE_PASSWORD }}
+                  application-id: ${{ env.LC_APPLICATION_ID }}
+                  scan-targets: '.'
