--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
         tags:
             - 'v*'
 
+env:
+    LC_APPLICATION_ID: the-cla
+
 jobs:
     goreleaser:
         runs-on: ubuntu-latest
@@ -18,6 +21,17 @@ jobs:
               with:
                   go-version-file: 'go.mod'
                   cache: true
+
+            - name: Sonatype Lifecycle Evaluation
+              id: evaluate
+              uses: sonatype/actions/evaluate@v1
+              with:
+                  iq-server-url: ${{ vars.SONATYPE_PLATFORM_URL }}
+                  username: ${{ secrets.SONATYPE_LIFECYCLE_USERNAME }}
+                  password: ${{ secrets.SONATYPE_LIFECYCLE_PASSWORD }}
+                  application-id: ${{ env.LC_APPLICATION_ID }}
+                  scan-targets: '.'
+                  stage: 'release'
 
             - name: Import GPG key
               uses: crazy-max/ghaction-import-gpg@v6
