chore(ci): fix LC APPLICATION_ID on release
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
             - 'v*'
 
 env:
-    LC_APPLICATION_ID: the-cla
+    LC_APPLICATION_ID: nexus-repo-asset-lister
 
 jobs:
     goreleaser:
